# FLUIDCHEN

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  GPU_README.md  README.md  WS1.md  WS2.md  WS3.md  mpi_BFS.sh  mpi_fluidtrap.sh  mpi_liddriven.sh  mpi_obstacle.sh  mpi_rayleighBenard.sh  mpi_shearflow.sh
docs/: boundary-hints.md  first-steps.md
example_cases/ChannelWithBFS/: ChannelWithBFSUpscaled.pgm  ChannelWithBFSUpscaled2.pgm  mpi_BFS.sh  mpi_Upscaled_BFS.sh  mpi_Upscaled_BFS2.sh
example_cases/ChannelWithObstacle/: ChannelWithObstacleUpscaled.pgm  Cylinder.pgm  UpscaledChannelWithObstacle.pgm  mpi_Upscaled_obstacle.sh  mpi_cylinder.sh  mpi_obstacle.sh
example_cases/FluidTrap/: mpi_fluidtrap.sh
example_cases/LidDrivenCavity/: mpi_liddriven.sh
example_cases/NaturalConvection/: NaturalConvection.pgm  mpi_convectionA.sh  mpi_convectionB.sh
example_cases/RayleighBenard/: RayleighBenard-long.pgm  RayleighBenard.pgm  mpi_rayleighBenard.sh
example_cases/ShearFlow/: ShearFlow.pgm  ShearFlow2.pgm  ShearFlowUpscaled.pgm  ShearFlowUpscaled2.pgm  mpi_Upscaled2.sh  mpi_shearflow.sh  paraview_plot_state.pvsm
include/: Boundary.hpp  Case.hpp  Cell.hpp  Communication.hpp  Datastructures.hpp  Discretization.hpp  Domain.hpp  Enums.hpp  Fields.hpp  Grid.hpp  PressureSolver.hpp  UtilsGPU.h  UtilsGPU.hpp  ViscositySolver.hpp
python/: performance_analyis.py
reports/: WS1.md  WS2.md  WS3.md
scripts/: plot_iterations.py
src/: Boundary.cpp  Case.cpp  Cell.cpp  Communication.cpp  Discretization.cpp  Fields.cpp  Grid.cpp  PressureSolver.cpp  UtilsGPU.cpp  ViscositySolver.cpp  main.cpp
